# mad_pwa_lab_exp_7

./: CYBERSECURITY_RESEARCH_TOPICS.md  _codeql_detected_source_root  cart.html  index.html  manifest.json  script.js  service-worker.js  service_worker.js  style.css
qameleon/: .env.example  Dockerfile  LICENSE  Makefile  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  pyproject.toml
qameleon/benchmarks/: energy_benchmark.py  latency_benchmark.py  memory_benchmark.py  run_all_benchmarks.py  scalability_benchmark.py  throughput_benchmark.py
qameleon/docs/: api-reference.md  architecture.md  deployment-guide.md  protocol-specification.md  threat-model.md
qameleon/formal_verification/proverif/: cross_domain.pv  qhp_model.pv
qameleon/formal_verification/tamarin/: forward_secrecy.spthy  key_secrecy.spthy  monotonic_upgrade.spthy  mutual_auth.spthy  qhp_protocol.spthy
qameleon/simulation/: mesh_simulator.py
qameleon/simulation/attack_scenarios/: cross_domain_leak.py  downgrade_attack.py  node_compromise.py  quantum_harvest.py
qameleon/simulation/battlefield_scenarios/: coalition_ops.py  convoy_movement.py
qameleon/src/qameleon/: __init__.py  config.py  exceptions.py  logger.py
qameleon/src/qameleon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
qameleon/tests/integration/: test_adaptive_rekey_flow.py  test_cross_domain.py  test_e2e_encryption.py  test_full_handshake.py  test_mesh_network.py  test_tcp_transport.py
qameleon/tests/security/: test_classification_integrity.py  test_downgrade_resistance.py  test_forward_secrecy.py  (+3 more)
(+80 files in other folders)
